Adding some configuration for the cors